bad/assign_array_casted_null_void.example_compiler_output
ERROR
[1mbad/assign_array_casted_null_void.lat:5:14: [1;31merror: [0;1mleft side is not assignable[m
	(int[])null = vfunc();
	            [1;32m^[m
[1mbad/assign_array_casted_null_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	(int[])null = vfunc();
	[1;32m^[m
